[package]
name = "gifbot-rs"
version = "0.1.0"
authors = ["Andrew <bigspeedfpv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }