[package]
name = "massive"
version = "0.5.0"
authors = ["Andrew <bigspeedfpv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15"
lliw = "0.1.2"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.10.9", features = ["collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
